objects/AW_Quoted_Solution__c.object
<CustomObject>
    <fields>
        <fullName>AW_Annuity_Frequency__c</fullName>
        <label>Annuity Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>None</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Annually</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Half-Annually</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Quarterly</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Weekly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Benefit_Category__c</fullName>
        <label>Benefit Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Benefit_Type__c</fullName>
        <label>Benefit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>136</fullName>
                    <label>Absolute Impairment</label>
                </value>
                <value>
                    <fullName>137</fullName>
                    <label>Absolute Impairment Plus</label>
                </value>
                <value>
                    <fullName>144</fullName>
                    <label>Absolute Income Protector</label>
                </value>
                <value>
                    <fullName>119</fullName>
                    <label>Absolute Protector (OD)</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <label>Absolute Protector (OOD)</label>
                </value>
                <value>
                    <fullName>97</fullName>
                    <label>Absolute Protector Plus (OD)</label>
                </value>
                <value>
                    <fullName>98</fullName>
                    <label>Absolute Protector Plus (OOD)</label>
                </value>
                <value>
                    <fullName>109</fullName>
                    <label>Capital Disability (OD)</label>
                </value>
                <value>
                    <fullName>110</fullName>
                    <label>Capital Disability (OOD)</label>
                </value>
                <value>
                    <fullName>95</fullName>
                    <label>Capital Disability Plus (OD)</label>
                </value>
                <value>
                    <fullName>96</fullName>
                    <label>Capital Disability Plus (OOD)</label>
                </value>
                <value>
                    <fullName>151</fullName>
                    <label>Free Child Illness Protector</label>
                </value>
                <value>
                    <fullName>107</fullName>
                    <label>Child Living Lifestyle</label>
                </value>
                <value>
                    <fullName>152</fullName>
                    <label>Free Claim Booster</label>
                </value>
                <value>
                    <fullName>132</fullName>
                    <label>EduCator</label>
                </value>
                <value>
                    <fullName>145</fullName>
                    <label>Extended Absolute Income Protector</label>
                </value>
                <value>
                    <fullName>106</fullName>
                    <label>Female Living Lifestyle</label>
                </value>
                <value>
                    <fullName>93</fullName>
                    <label>Financial Protector</label>
                </value>
                <value>
                    <fullName>114</fullName>
                    <label>Funeral Benefit</label>
                </value>
                <value>
                    <fullName>113</fullName>
                    <label>Future Protector</label>
                </value>
                <value>
                    <fullName>149</fullName>
                    <label>Guaranteed Dependant Protecto</label>
                </value>
                <value>
                    <fullName>130</fullName>
                    <label>Hospitalisation Lifestyle Enhancer</label>
                </value>
                <value>
                    <fullName>118</fullName>
                    <label>Impairment</label>
                </value>
                <value>
                    <fullName>99</fullName>
                    <label>Impairment Plus</label>
                </value>
                <value>
                    <fullName>94</fullName>
                    <label>Life Cover</label>
                </value>
                <value>
                    <fullName>150</fullName>
                    <label>Living Lifestyle Dependant Protector</label>
                </value>
                <value>
                    <fullName>148</fullName>
                    <label>Living Lifestyle Protector benefit</label>
                </value>
                <value>
                    <fullName>153</fullName>
                    <label>The Maternity Pause Option</label>
                </value>
                <value>
                    <fullName>146</fullName>
                    <label>The Overhead Expenses Protector</label>
                </value>
                <value>
                    <fullName>111</fullName>
                    <label>Premium Protector - Death</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Contract Downloaded Successfully</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Load/CC Outstanding</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Ready for Upload</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Upload Initiated</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Duplicate Contract. Already exists on NB files</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Invalid Product</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Cons Code closed</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Upload Unsuccessful</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Invalid Contract Number</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Cons Code Not found</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Linked Life Contract not found</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Contract found on Intermediate files</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>No Control Record found. Upload again</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Repeat upload. PC file corrupt</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>Repeat upload. No records in upload file</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>System Error. Contact Hotseat</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Upload Successful to Mainframe</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Mainframe Process Too Far Advanced. Load New Set</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>Contract Number is Zero</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>Contract Not On Mainframe Master Files</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>No Client Role Specified</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Logged</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>Upload not Allowed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Income_Escalation__c</fullName>
        <label>Income Escalation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_Life_Assured__c</fullName>
        <label>Life Assured</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Nett_Annuity_Amount__c</fullName>
        <label>Nett Annuity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Quote_Name__c</fullName>
        <label>Quote Name</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quoted Solutions</relationshipLabel>
        <relationshipName>Quoted_Solutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AW_Recurring_Premium_Amount__c</fullName>
        <label>Recurring Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Recurring_Premium_Escalation__c</fullName>
        <label>Recurring Premium Escalation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_Recurring_Premium_Frequency__c</fullName>
        <label>Recurring Premium Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>None</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Annually</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Half-Annually</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Quarterly</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Weekly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Single_Premium_Amount__c</fullName>
        <label>Single Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Source_System_Name__c</fullName>
        <label>Source System Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>atWork</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Avalon</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>BPNB</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>SFDC</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Sum_Assured__c</fullName>
        <label>Sum Assured</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TF_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>TF External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_Withdrawal_Amount__c</fullName>
        <label>Withdrawal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Withdrawal_Frequency__c</fullName>
        <label>Withdrawal Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>None</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Annually</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Half-Annually</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Quarterly</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Weekly</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Withdrawal_Increase__c</fullName>
        <label>Withdrawal Increase</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Quoted Solution</label>
    <nameField>
        <label>Quoted Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quoted Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>